# disty

./: .coveragerc  .dockerignore  .gitignore  .travis.yml  Cargo.toml  Dockerfile  README.md  Rocket.toml  pyproject.toml  release.toml  requirements.txt  run.sh
.github/workflows/: cd.yml  ci.yml  images.yaml  images.yml  prepare-release.yml  release.yaml  release.yml
benches/: manifest.rs
distribd/: __main__.py  actions.py  analyzer.py  authenticate.py  config.py  config_default.yaml  exceptions.py  garbage.py  jobs.py  log.py  machine.py  mirror.py  prometheus.py  raft.py  reducers.py  registry.py  seeding.py  service.py  state.py  storage.py  webhook.py
distribd/schemas/: vnd.docker.distribution.manifest.v2+json.json
distribd/utils/: dispatch.py  registry.py  tick.py  tls.py  tokenchecker.py  tokengetter.py  web.py
docs/: mkdocs.yml
docs/docs/: index.md  installation.md
docs/docs/configuration/: authentication.md  authorization.md  cleanup.md
fixtures/etc/distribd/: config.yaml  token.key
fixtures/etc/disty/: 1-node.yaml  token.crt  token.key  token.pub
fixtures/manifests/: no_media_type.json  oci_with_annotations.json  oci_with_new_fields.json  ref_test_1.json  ref_test_2.json  ref_test_3.json  ref_test_4.json  ref_test_5.json  ref_test_6.json  ref_test_7.json  ref_test_8.json
integration/: conftest.py  test_oci.py
migrations/: 00001_init.sql  00002_add_delete_cascade.sql  00002_fix_tags.sql  00003_add_new_pl_to_blobs.sql  00003_fix_timestamps.sql  00004_add_manifest_repositories.sql  00005_subjects.sql  00006_annotations_and_artifact_type.sql
old/fixtures/etc/distribd/: token.pub
old/integration/: test_oci.py
old/src/: app.rs  garbage.rs  scrubber.rs  snapshot.rs  state.rs  utils.rs
old/src/middleware/: mod.rs  shutdown.rs
old/src/network/: server.rs
old/src/registry/blobs/uploads/: put.rs
old/src/registry/manifests/: delete.rs
old/src/registry/tags/: get.rs
old/src/schemas/: vnd.docker.container.image.v1+json.json  vnd.docker.distribution.manifest.v2+json.json  vnd.oci.image.index.v1+json.json
old/src/types/: blob.rs  manifest.rs
registry/: __main__.py  raft.py  registry.py
registry/utils/: web.py
rust/: Cargo.toml
rust/src/: extractor.rs  headers.rs  lib.rs  registry.rs  utils.rs  webhook.rs
rust/src/responses/: access_denied.rs  blob.rs  blob_not_found.rs  manifest.rs  manifest_not_found.rs  mod.rs
rust/src/types/: actions.rs  blob.rs  digest.rs  manifest.rs  mod.rs  registry_state.rs  repositories.rs  repository_name.rs
rust/src/views/: mod.rs  utils.rs
rust/src/views/blobs/: delete.rs  get.rs  mod.rs  put.rs
rust/src/views/blobs/uploads/: delete.rs  get.rs  patch.rs  post.rs  put.rs
rust/src/views/manifests/: delete.rs  get.rs  mod.rs  put.rs
scripts/: run.sh  test-kaniko.sh  test.sh
src/: app.rs  certificate.rs  client.rs  clock.rs  config.rs  context.rs  digest.rs  error.rs  extractor.rs  garbage.rs  headers.rs  issuer.rs  jwt.rs  lib.rs  log.rs  machine.rs  main.rs  metrics.rs  mint.rs  mirror.rs  node.rs  notify.rs  prometheus.rs  raft.rs  reducer.rs  registry.rs  scrubber.rs  snapshot.rs  state.rs  storage.rs  store.rs  tests.rs  time.rs  token.rs  utils.rs  webhook.rs
src.old/: main.rs  mirror.rs  prometheus.rs  utils.rs
src.old/types/: broadcast.rs  manifest.rs  manifest_entry.rs  registry_state.rs  repository.rs  repository_name.rs
src.old/views/: mod.rs  utils.rs
src.old/views/blobs/: get.rs
src.old/views/blobs/uploads/: get.rs  post.rs  put.rs
src.old/views/manifests/: delete.rs  get.rs  put.rs
src/config/: acl.rs  duration.rs  files.rs  lifecycle.rs  mod.rs
src/config/acl/: leaf.rs  mod.rs  number.rs  string.rs
src/extractors/: mod.rs  token.rs
src/matchengine/: mod.rs
src/middleware/: mod.rs  prometheus.rs  shutdown.rs
src/network/: api.rs  management.rs  mod.rs  raft.rs  raft_network_impl.rs  server.rs
src/network/registry/: errors.rs  mod.rs  utils.rs
src/network/registry/blobs/: delete.rs  get.rs  mod.rs
src/network/registry/blobs/uploads/: delete.rs  get.rs  patch.rs  post.rs  put.rs
src/network/registry/manifests/: delete.rs  get.rs  put.rs
src/network/registry/tags/: get.rs
src/registry/: content_range.rs  errors.rs  get.rs  head.rs  middleware.rs  mod.rs  referrers.rs  root.rs  token.rs  utils.rs
src/registry/blobs/: delete.rs  get.rs  head.rs  mod.rs
src/registry/blobs/uploads/: delete.rs  get.rs  mod.rs  patch.rs  post.rs  put.rs
src/registry/manifests/: delete.rs  get.rs  head.rs  mod.rs  put.rs
src/registry/tags/: get.rs
src/responses/: access_denied.rs  manifest.rs  manifest_created.rs  manifest_not_found.rs  mod.rs  upload_accepted.rs
src/rpc/: client.rs  mod.rs  server.rs
src/schemas/: vnd.docker.distribution.manifest.list.v2+json.json  vnd.docker.distribution.manifest.v1+prettyjws.json  vnd.oci.image.manifest.v1+json.json
src/store/: metrics.rs  mod.rs  registry_store.rs  store.rs  test.rs
src/types/: action.rs  actions.rs  blob.rs  blob_entry.rs  digest.rs  manifest.rs  manifest_entry.rs  metric_labels.rs  mod.rs  registry_state.rs  repository_name.rs  tag_key.rs
src/views/: get.rs  mod.rs  unauthorized.rs  utils.rs
src/views/blobs/: delete.rs  get.rs  mod.rs
src/views/blobs/tags/: list.rs  mod.rs
src/views/blobs/uploads/: delete.rs  get.rs  mod.rs  patch.rs  post.rs  put.rs
src/views/manifests/: delete.rs  get.rs  mod.rs  put.rs
src/views/tags/: get.rs
tests/: conftest.py  test_analyzer.py  test_exceptions.py  test_jobs.py  test_log.py  test_machine.py  test_prometheus.py  test_raft.py  test_registry.py  test_seeding.py  test_state.py  test_storage.py  test_webhook.py
tests/cluster/: test_cluster.rs
tests/fixtures/: token.crt  vnd.docker.distribution.manifest.list.v2+json.1
tests/fixtures/tls/: cert.pem  combined.pem  key.pem
tests/utils/: test_registry.py  test_tls.py
