[package]
name = "disty"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
axum-extra = { version = "0.10.1", features = ["typed-header", "file-stream", "query"] }
base64 = "0.22.1"
chrono = "0.4.41"
clap = "4.5.39"
data-encoding = "2.9.0"
figment = { version = "0.10.19", features = ["env", "yaml"] }
futures = "0.3.31"
futures-util = "0.3.31"
headers = "0.4.0"
hiqlite = { version = "0.6.0", features = ["listen_notify_local"] }
hiqlite-macros = "0.6.0"
hostname = "0.4.1"
httpdate = "1.0.3"
ip_network = { version = "0.4.1", features = ["serde"] }
json = "0.12.4"
jsonschema = "0.30.0"
jwt-simple = "0.12.12"
p256 = { version = "0.13.2", features = ["pem", "pkcs8"] }
percent-encoding = "2.3.1"
platform-dirs = "0.3.0"
prometheus-client = "0.23.1"
pwhash = "1.0.0"
rand = "0.9.1"
regex = "1.11.1"
reqwest = { version = "0.12.18", default-features = false, features = ["json", "rustls-tls", "trust-dns"] }
ring = "0.17.14"
schema = "0.1.0"
sec1 = { version = "0.7.3", features = ["pem", "pkcs8"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_regex = "1.1.0"
strum = "0.27.1"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["fs", "rt-multi-thread"] }
tokio-retry = "0.3.0"
tokio-stream = "0.1.17"
tokio-util = "0.7.15"
tower = "0.5.2"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.17.0", features = ["v4"] }
x509-parser = "0.17.0"

[dev-dependencies]
tempfile = "3.20.0"
once_cell = "1.21.3"
test-log = { version = "0.2.17", features = ["trace"] }
http-body-util = "0.1.3"
serde_json = "1.0.140"
assert-json-diff = "2.0.2"
