[tool.poetry]
name = "distribd"
version = "0.1.0"
description = "A simple replicated docker image registry"
authors = ["John Carr <john.carr@unrouted.co.uk>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.7"
aiohttp = "^3.6.2"
aiofile = "^1.5.2"

[tool.poetry.dev-dependencies]
mypy = "^0.770"
pytest = "^5.4.1"
isort = "^4.3.21"
pytest-aiohttp = "^0.3.0"
black = "^19.10b0"
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
